# sdprlayer

./: .gitignore  .gitmodules  README.md  environment.yml  requirements.txt  setup.cfg
_data/: README.md
_scripts/: ess_mat_clearn.py  fund_mat_clearn.py  poly6_example.py  poly8_minshift_ex.py  pose_est_grad_compare.py  ro_cal.py  stereo_cal.py  test_prob_8G.pkl  test_rank1.py  tighten_example.ipynb
_scripts/outputs/: poly6_sdpr.pkl  poly6_th1.pkl  poly6_th2.pkl  stereo_cal_local_min_init.pkl
_test/: test_essmat.py  test_fundmat.py  test_polyminlayer.py  test_pose_est.py  test_ro_basics.py  test_ro_bias.py  test_ro_tuning.py  test_sdpr_poly4.py  test_sdpr_poly6.py  test_sdpr_poly8.py  test_sdprlayer.py  test_stereo_tune.py
src/sdpr_layer/: sdpr_layer.py
src/sdprlayer/: __init__.py  plot_tools.py  polyminlayer.py  ro_problems.py  ro_tuner.py  sdprlayer.py  stereo_tuner.py
src/sdprlayer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sdprlayer/layers/: fundmat_est.py  pose_est.py
src/sdprlayer/utils/: fund_mat_utils.py  keypoint_tools.py  lie_algebra.py
src/sdprlayers/: __init__.py
src/sdprlayers/layers/: essential_est.py  fundmat_est.py  lieopt_pose_est.py  polyminlayer.py  pose_est.py  sdprlayer.py  svd_pose_est.py
src/sdprlayers/utils/: camera_model.py  ess_mat_utils.py  fund_mat_utils.py  keypoint_tools.py  plot_tools.py  pose_est_grad_compare.py  stereo_camera_model.py  stereo_tuner.py
src/utils/: __init__.py  plot_tools.py
