[metadata]
name = sdpr_bkprop
version = 0.0.1
authors = [
    {name = "Connor Holmes", email = "connor.holmes@mail.utoronto.ca" },]
description = Repository for autodiff backpropagation through convex relaxations
long_description = file : README.md
long_description_content_type = text/markdown
readme = "README.md"
license = { file="LICENSE" }

[project.urls]
"Homepage" = "https://github.com/holmesco/"

# Below is for autodiscovery
[options]
package_dir=
    =src
packages=find:
[options.packages.find]
where=src

[tool:pytest] # check how much of the codebase is covered/tested
addopts = --cov=hello 

[flake8]
ignore = W292, W391, F541, F841, 
exclude = notebooks/*, *.ipynb_checkpoints*